fixed overlapp, added anchors to the links

--- a/org.salvationarmy.canteenreport/www/sass/_start.scss
+++ b/org.salvationarmy.canteenreport/www/sass/_start.scss
@@ -6,7 +6,7 @@
 	margin: 0 auto;
 }
 .container.framed{
-	padding-left: 80px;
+	padding-left: 100px;
 	padding-top: 60px;
 }
 /* 
